--- a/src/index.html
+++ b/src/index.html
@@ -11,11 +11,11 @@
 
 </head>
 
-<body id="body">
+<body id="body" class="bg-gradient-to-r from-cyan-600 to-violet-500">
     <div id="main">
 
         <div id="buttons" class="grid grid-cols-4 gap-4 border-2 border-slate-700 bg-slate-600 rounded-xl p-2">
-            <input type="text" name="submit" id="result" class="col-span-4 mt-2 mb-2 rounded-xl p-4 text-xl" placeholder="">
+            <input type="text" name="submit" id="result" class="col-span-4 mt-2 mb-2 rounded-xl p-4 text-xl bg-gray-700 text-white" placeholder="">
             <button type="button" id="btn-1"class="border-2 border-slate-700 bg-slate-500 hover:bg-sky-500 active:bg-sky-700 rounded-xl backdrop-blur-md text-lg">1</button>
             <button type="button" id="btn-2"class="border-2 border-slate-700 bg-slate-500 hover:bg-sky-500 active:bg-sky-700 rounded-xl backdrop-blur-md text-lg">2</button>
             <button type="button" id="btn-3"class="border-2 border-slate-700 bg-slate-500 hover:bg-sky-500 active:bg-sky-700 rounded-xl backdrop-blur-md text-lg">3</button>
