--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Online Calculator</title>
     <link rel="stylesheet" href="../dist/tailwind.css">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="./src/main.css">
 
 </head>
 
@@ -31,7 +31,7 @@
             <button type="button" id="btn-times"class="border-2 border-slate-700 bg-slate-500 hover:bg-sky-500 active:bg-sky-700 rounded-xl backdrop-blur-sm text-lg">x</button>
             <button type="button" id="btn-divide"class="border-2 border-slate-700 bg-slate-500 hover:bg-sky-500 active:bg-sky-700 rounded-xl backdrop-blur-sm text-lg">÷</button>
             <button type="button" id="btn-mod"class="border-2 border-slate-700 bg-slate-500 hover:bg-sky-500 active:bg-sky-700 rounded-xl backdrop-blur-sm text-lg">%</button>
-            <button type="button" id="b"class="border-2 border-slate-700 bg-slate-500 hover:bg-sky-500 active:bg-sky-700 rounded-xl text-lg"><img src="backspace.svg" alt="backspace"></button>
+            <button type="button" id="b"class="border-2 border-slate-700 bg-slate-500 hover:bg-sky-500 active:bg-sky-700 rounded-xl text-lg"><img src="./src/backspace.svg" alt="backspace"></button>
             <button type="button" id="c"class="border-2 border-slate-700 bg-slate-500 hover:bg-sky-500 active:bg-sky-700 rounded-xl text-lg">C</button>
             <button type="button" id="e"class="bg-sky-400 hover:bg-sky-500 active:bg-sky-700 rounded-xl border-slate-700 text-lg">=</button>
         </div>
