--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="main.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Online Calculator</title>
-    <link rel="stylesheet" href="../dist/tailwind.css">
+    <link rel="stylesheet" href="./dist/tailwind.css">
     <link rel="stylesheet" href="./src/main.css">
 
 </head>
