--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-latest.min.js"></script>
-    <script src="main.js"></script>
+    <script src="src/main.js"></script>
 </body>
 
 </html>
