--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="main">
 
         <div id="buttons" class="grid grid-cols-4 gap-4 border-2 border-slate-700 bg-slate-600 rounded-xl p-2 shadow-xl">
-            <input type="text" name="submit" id="result" class="col-span-4 mt-2 mb-2 rounded-xl p-4 text-xl bg-gray-700 text-white shadow-inner" placeholder="">
+            <input type="text" name="submit" id="result" class="col-span-4 mt-2 mb-2 rounded-xl p-4 text-xl bg-gray-700 text-white shadow-inner" placeholder=""/>
             <button type="button" id="btn-1"class="border-2 border-slate-700 bg-slate-500 hover:bg-sky-500 active:bg-sky-700 rounded-xl backdrop-blur-md text-lg transition duration-500 ease-in-out">1</button>
             <button type="button" id="btn-2"class="border-2 border-slate-700 bg-slate-500 hover:bg-sky-500 active:bg-sky-700 rounded-xl backdrop-blur-md text-lg transition duration-500 ease-in-out">2</button>
             <button type="button" id="btn-3"class="border-2 border-slate-700 bg-slate-500 hover:bg-sky-500 active:bg-sky-700 rounded-xl backdrop-blur-md text-lg transition duration-500 ease-in-out">3</button>
@@ -35,7 +35,13 @@
             <button type="button" id="btn-bracket-close"class="border-2 border-slate-700 bg-slate-500 hover:bg-sky-500 active:bg-sky-700 rounded-xl backdrop-blur-sm text-lg transition duration-500 ease-in-out">)</button>
             <button type="button" id="b"class="border-2 border-slate-700 bg-slate-500 hover:bg-sky-500 active:bg-sky-700 rounded-xl text-lg transition duration-500 ease-in-out"><img src="./src/backspace.svg" alt="backspace"></button>
             <button type="button" id="c"class="border-2 border-slate-700 bg-slate-500 hover:bg-sky-500 active:bg-sky-700 rounded-xl text-lg transition duration-500 ease-in-out">C</button>
-            <button type="button" id="e"class="bg-sky-400 hover:bg-sky-500 active:bg-sky-700 rounded-xl border-slate-700 text-lg transition duration-500 ease-in-out">=</button>
+            <div class="flex flex-col">
+                <button type="button" id="dot"
+                    class="border-2 border-slate-700 bg-slate-500 hover:bg-sky-500 active:bg-sky-700 rounded-xl text-lg transition duration-500 ease-in-out">.</button>
+                <button type="button" id="e"
+                    class="bg-sky-400 hover:bg-sky-500 active:bg-sky-700 rounded-xl border-slate-700 text-lg transition duration-500 ease-in-out">=</button>
+            </div>
+            
         </div>
     </div>
     <a href="https://github.com/Abdullah-coder2013/JsCalc">My Github</a>
