--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div id="buttons" class="grid grid-cols-4 gap-4 border-2 border-slate-700 bg-slate-600 rounded-xl p-2 shadow-xl">
             <div class="col-span-4">
                 <input type="text" name="submit" id="result"
-                    class="col-span-4 rounded-xl p-4 text-xl bg-gray-700 text-white shadow-inner" placeholder="0" dir="ltr" />
+                    class="rounded-xl p-4 text-xl bg-gray-700 text-white shadow-inner" placeholder="0" dir="ltr" />
                 <button type="button" id="b"
                     class="border-2 border-slate-700 bg-slate-500 hover:bg-sky-500 active:bg-sky-700 rounded-xl text-lg transition duration-100 ease-in-out"><img
                         src="./src/backspace.svg" alt="backspace"></button>
@@ -70,7 +70,7 @@
             <button type="button" id="btn-bracket-close"
                 class="border-2 border-slate-700 bg-slate-500 hover:bg-sky-500 active:bg-sky-700 rounded-xl backdrop-blur-sm text-lg transition duration-100 ease-in-out">)</button>
             <button type="button" id="e"
-                class="bg-slate-500 hover:bg-sky-500 active:bg-sky-700 rounded-xl border-slate-700 text-lg transition duration-100 ease-in-out">=</button>
+                class="bg-sky-400 hover:bg-sky-500 active:bg-sky-700 rounded-xl border-sky-700 text-lg transition duration-100 ease-in-out">=</button>
         </div>
     </div>
     <a href="https://github.com/Abdullah-coder2013/JsCalc">My Github</a>
