--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     <div id="calculator" class="grid grid-cols-4 gap-4 border-2 border-slate-700 bg-slate-600 rounded-xl p-2 shadow-xl">
         <div class="col-span-4">
             <input type="text" name="submit" id="result"
-                class="col-span-3 rounded-xl p-4 text-xl bg-gray-700 text-white shadow-inner" placeholder="0" dir="ltr" />
+                class="rounded-xl p-4 text-xl bg-gray-700 text-white shadow-inner" placeholder="0" dir="ltr" />
             <button type="button" id="b"
-                class="col-span-1 border-2 border-slate-700 bg-slate-500 hover:bg-sky-500 active:bg-sky-700 rounded-xl text-lg transition duration-100 ease-in-out"><img
+                class="border-2 border-slate-700 bg-slate-500 hover:bg-sky-500 active:bg-sky-700 rounded-xl text-lg transition duration-100 ease-in-out"><img
                     src="./src/backspace.svg" alt="backspace"></button>
         </div>
         <button type="button" id="btn-divide"
