--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <body id="body" class="bg-gradient-to-r from-cyan-600 to-violet-500 flex flex-column justify-center items-center">
     <div id="calculator" class="grid grid-cols-4 gap-4 border-2 border-slate-700 bg-slate-600 rounded-xl p-2 shadow-xl">
-        <div class="col-span-4">
+        <div class="col-span-4 gap-4">
             <input type="text" name="submit" id="result"
                 class="rounded-xl p-4 text-xl bg-gray-700 text-white shadow-inner" placeholder="0" dir="ltr" />
             <button type="button" id="b"
